--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
 meta_product_name: "Léo Chaput"
 meta_title: "Léo Chaput - Développeur web Fullstack"
-meta_description: "Développeur web fullstack pa"
+meta_description: "Développeur web fullstack passionné et curieux, je vous accompagne pour réaliser vos sites web de la conception à la mise en production."
 meta_image: "test-responsive.png" # should exist in `app/assets/images/`
